fix: use Java 8 for starting emulator