@@ -3,7 +3,9 @@
 # This script was copy-pasted from https://docs.microsoft.com/en-us/azure/devops/pipelines/languages/android?view=azure-devops#test-on-the-android-emulator
 # with some changes
 
-export JAVA_OPTS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+# Use Java 8 for these tasks, or it will error with
+# Exception in thread "main" java.lang.NoClassDefFoundError: javax/xml/bind/annotation/XmlSchema
+export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
 
 # Install AVD files
 declare -r emulator="system-images;android-$ANDROID_SDK_VERSION;google_apis;x86"
